# kahwa-lang

./: .gitignore  CMakeLists.txt  grammar.md  language-constructs.md
include/: Tokeniser.h
include/arena/: Arena.h
include/diagnostics/: Diagnostic.h  DiagnosticEngine.h  DiagnosticKind.h  DiagnosticSeverity.h
include/diagnostics/semantic/: SemanticError.h
include/parser/: ASTBuilder.h  Block.h  Class.h  ClassDecl.h  Decl.h  ExtensibilityModifier.h  FieldDecl.h  KahwaFile.h  MethodDecl.h  Modifier.h  ModifierNode.cpp  ModifierNode.h  Parser.h  SemanticAnalyser.cpp  SemanticAnalyser.h  Stmt.h  SymbolBuilder.cpp  SymbolBuilder.h  TypeRef.h  TypedefDecl.h  VisibilityModifier.h
include/parser/exceptions/: CompilationError.h
include/parser/exceptions/lexical/: LexicalError.h  UnrecognisedTokenError.h  UnterminatedStringLiteralError.h
include/parser/exceptions/semantic/: ModifierError.h
include/parser/expr/: BinaryExpr.cpp  BinaryExpr.h  BinaryOp.h  CallExpr.cpp  CallExpr.h  Expr.cpp  Expr.h  ExprKind.cpp  ExprKind.h  FunctionCall.cpp  FunctionCall.h  IdentifierRef.cpp  IdentifierRef.h  MemberAccessExpr.cpp  MemberAccessExpr.h  Stmt.h  TernaryExpr.cpp  TernaryExpr.h  UnaryExpr.cpp  UnaryExpr.h  UnaryOp.h
include/parser/expr/literals/: BoolLiteral.h  FloatLiteral.h  IntegerLiteral.h  NullLiteral.h  StringLiteral.h
include/parser/stmt/: BreakStmt.cpp  BreakStmt.h  ContinueStmt.cpp  ContinueStmt.h  ExprStmt.cpp  ExprStmt.h  ForLoop.cpp  ForLoop.h  IfStmt.cpp  IfStmt.h  ReturnStmt.cpp  ReturnStmt.h  StmtKind.cpp  StmtKind.h  WhileLoop.cpp  WhileLoop.h
include/source/: SourceFile.h  SourceLocation.h  SourceManager.h  SourceRange.h
include/symbols/: ClassSymbol.cpp  ClassSymbol.h  FieldSymbol.cpp  FieldSymbol.h  FunctionSymbol.cpp  FunctionSymbol.h  MethodSymbol.cpp  MethodSymbol.h  Scope.cpp  Scope.h  SemanticAnalyser.h  Symbol.cpp  Symbol.h  SymbolBuilder.h  TranslationUnit.cpp  TranslationUnit.h  TypeParameterSymbol.cpp  TypeParameterSymbol.h  TypeSymbol.cpp  TypeSymbol.h  VariableSymbol.cpp  VariableSymbol.h  VisibleVariableSymbol.cpp  VisibleVariableSymbol.h
include/tokeniser/: Token.h  TokenType.h  Tokeniser.h
include/types/: Type.h  Variance.h
src/arena/: Arena.cpp
src/parser/: ASTBuilder.cpp  Block.cpp  Class.cpp  ClassDecl.cpp  Decl.cpp  FieldDecl.cpp  MethodDecl.cpp  Parser.cpp  Stmt.cpp
src/parser/exceptions/: CompilationError.cpp
src/source/: SourceLocation.cpp  SourceManager.cpp  SourceRange.cpp
src/symbols/: ClassSymbol.cpp  FunctionSymbol.cpp  MethodSymbol.cpp  SemanticAnalyser.cpp  SymbolBuilder.cpp  TypeParameterSymbol.cpp
src/tokeniser/: Token.cpp  Tokeniser.cpp
src/types/: Type.cpp
tests/: DiagnosticTesting.cpp  DiagnosticTesting.h  TokenTest.cpp
tests/diagnostics/: DiagnosticEngineTest.cpp
tests/parser/: ParserTest.cpp
tests/semantic_analysis/: SemanticAnalyserTest.cpp  TypeTest.cpp
tests/tokeniser/: TokenTest.cpp  TokeniserTest.cpp
