cmake_minimum_required(VERSION 3.31)
project(kahwa_lang)

set(CMAKE_CXX_STANDARD 20)

include(FetchContent)

FetchContent_Declare(
        magic_enum
        GIT_REPOSITORY https://github.com/Neargye/magic_enum.git
        GIT_TAG        v0.9.5   # or latest release
)

FetchContent_MakeAvailable(magic_enum)

FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG        release-1.12.1
)
FetchContent_MakeAvailable(googletest)

add_executable(kahwa_lang main.cpp
        src/tokeniser/Token.cpp
        include/tokeniser/Token.h
        include/tokeniser/TokenType.h
        src/tokeniser/Tokeniser.cpp
        include/tokeniser/Tokeniser.h
        src/parser/ClassDecl.cpp
        include/parser/ClassDecl.h
        include/diagnostics/DiagnosticEngine.h
        include/diagnostics/DiagnosticSeverity.h
        include/diagnostics/Diagnostic.h
        src/source/SourceManager.cpp
        include/source/SourceManager.h
        include/source/SourceFile.h
        include/source/SourceLocation.h
        include/diagnostics/DiagnosticKind.h
        include/source/SourceRange.h
        include/parser/Modifier.h
        src/parser/FieldDecl.cpp
        include/parser/FieldDecl.h
        src/parser/MethodDecl.cpp
        include/parser/MethodDecl.h
        include/parser/TypeRef.h
        src/arena/Arena.cpp
        include/arena/Arena.h
        src/parser/Parser.cpp
        include/parser/Parser.h
        include/parser/TypedefDecl.h
        include/parser/KahwaFile.h
        src/source/SourceLocation.cpp
        src/source/SourceRange.cpp
        src/parser/Block.cpp
        include/parser/Block.h
        src/parser/Stmt.cpp
        include/parser/expr/Stmt.h
        src/parser/Decl.cpp
        include/parser/Decl.h
        src/parser/ASTBuilder.cpp
        include/parser/ASTBuilder.h
        src/symbols/FunctionSymbol.cpp
        include/symbols/FunctionSymbol.h
        src/symbols/ClassSymbol.cpp
        include/symbols/ClassSymbol.h
        src/symbols/TypeParameterSymbol.cpp
        include/symbols/TypeParameterSymbol.h
        src/symbols/MethodSymbol.cpp
        include/symbols/MethodSymbol.h
        src/symbols/SemanticAnalyser.cpp
        include/symbols/SemanticAnalyser.h
        src/symbols/SymbolBuilder.cpp
        include/symbols/SymbolBuilder.h
        include/parser/ModifierNode.cpp
        include/parser/ModifierNode.h
        src/types/Type.cpp
        include/types/Type.h
        include/types/Variance.h
        include/symbols/TypeSymbol.cpp
        include/symbols/TypeSymbol.h
        include/symbols/Symbol.cpp
        include/symbols/Symbol.h
        include/symbols/Scope.cpp
        include/symbols/Scope.h
        include/symbols/TranslationUnit.cpp
        include/symbols/TranslationUnit.h
        include/symbols/VariableSymbol.cpp
        include/symbols/VariableSymbol.h
        include/symbols/VisibleVariableSymbol.cpp
        include/symbols/VisibleVariableSymbol.h
        include/symbols/FieldSymbol.cpp
        include/symbols/FieldSymbol.h
        include/parser/expr/Expr.cpp
        include/parser/expr/Expr.h
        include/parser/expr/BinaryExpr.cpp
        include/parser/expr/BinaryExpr.h
        include/parser/expr/BinaryOp.h
        include/parser/expr/UnaryOp.h
        include/parser/expr/UnaryExpr.cpp
        include/parser/expr/UnaryExpr.h
        include/parser/expr/TernaryExpr.cpp
        include/parser/expr/TernaryExpr.h
        include/parser/expr/literals/IntegerLiteral.h
        include/parser/expr/literals/FloatLiteral.h
        include/parser/expr/literals/BoolLiteral.h
        include/parser/expr/literals/StringLiteral.h
        include/parser/expr/literals/NullLiteral.h
        include/parser/expr/IdentifierRef.cpp
        include/parser/expr/IdentifierRef.h
        include/parser/expr/FunctionCall.cpp
        include/parser/expr/FunctionCall.h
        include/parser/stmt/IfStmt.cpp
        include/parser/stmt/IfStmt.h
        include/parser/stmt/WhileLoop.cpp
        include/parser/stmt/WhileLoop.h
        include/parser/stmt/ForLoop.cpp
        include/parser/stmt/ForLoop.h
        include/parser/stmt/ReturnStmt.cpp
        include/parser/stmt/ReturnStmt.h
        include/parser/stmt/BreakStmt.cpp
        include/parser/stmt/BreakStmt.h
        include/parser/stmt/ContinueStmt.cpp
        include/parser/stmt/ContinueStmt.h
        include/parser/expr/MemberAccessExpr.cpp
        include/parser/expr/MemberAccessExpr.h
        include/parser/expr/CallExpr.cpp
        include/parser/expr/CallExpr.h
        include/parser/stmt/ExprStmt.cpp
        include/parser/stmt/ExprStmt.h
        include/parser/expr/ExprKind.cpp
        include/parser/expr/ExprKind.h
        include/parser/stmt/StmtKind.cpp
        include/parser/stmt/StmtKind.h
)

target_link_libraries(kahwa_lang PRIVATE magic_enum::magic_enum)

enable_testing()

add_executable(
    tests
        tests/tokeniser/TokenTest.cpp
        tests/tokeniser/TokeniserTest.cpp
        tests/diagnostics/DiagnosticEngineTest.cpp
        tests/parser/ParserTest.cpp
        src/tokeniser/Token.cpp
        include/tokeniser/Token.h
        include/tokeniser/TokenType.h
        src/tokeniser/Tokeniser.cpp
        include/tokeniser/Tokeniser.h
        src/parser/ClassDecl.cpp
        include/parser/ClassDecl.h
        include/diagnostics/DiagnosticEngine.h
        include/diagnostics/DiagnosticSeverity.h
        include/diagnostics/Diagnostic.h
        src/source/SourceManager.cpp
        include/source/SourceManager.h
        include/source/SourceFile.h
        include/source/SourceLocation.h
        include/diagnostics/DiagnosticKind.h
        include/source/SourceRange.h
        include/parser/Modifier.h
        src/parser/FieldDecl.cpp
        include/parser/FieldDecl.h
        src/parser/MethodDecl.cpp
        include/parser/MethodDecl.h
        include/parser/TypeRef.h
        src/arena/Arena.cpp
        include/arena/Arena.h
        src/parser/Parser.cpp
        include/parser/Parser.h
        include/parser/TypedefDecl.h
        include/parser/KahwaFile.h
        src/source/SourceLocation.cpp
        src/source/SourceRange.cpp
        src/parser/ASTBuilder.cpp
        include/parser/ASTBuilder.h
        src/symbols/FunctionSymbol.cpp
        include/symbols/FunctionSymbol.h
        src/symbols/ClassSymbol.cpp
        include/symbols/ClassSymbol.h
        src/symbols/TypeParameterSymbol.cpp
        include/symbols/TypeParameterSymbol.h
        src/symbols/MethodSymbol.cpp
        include/symbols/MethodSymbol.h
        src/symbols/SemanticAnalyser.cpp
        include/symbols/SemanticAnalyser.h
        src/symbols/SymbolBuilder.cpp
        include/symbols/SymbolBuilder.h
        include/parser/ModifierNode.cpp
        include/parser/ModifierNode.h
        src/types/Type.cpp
        include/types/Type.h
        include/types/Variance.h
        include/symbols/TypeSymbol.cpp
        include/symbols/TypeSymbol.h
        include/symbols/Symbol.cpp
        include/symbols/Symbol.h
        tests/semantic_analysis/SemanticAnalyserTest.cpp
        tests/DiagnosticTesting.h
        tests/DiagnosticTesting.cpp
        tests/semantic_analysis/TypeTest.cpp
        include/symbols/Scope.cpp
        include/symbols/Scope.h
        include/symbols/TranslationUnit.cpp
        include/symbols/TranslationUnit.h
        include/symbols/VariableSymbol.cpp
        include/symbols/VariableSymbol.h
        include/symbols/VisibleVariableSymbol.cpp
        include/symbols/VisibleVariableSymbol.h
        include/symbols/FieldSymbol.cpp
        include/symbols/FieldSymbol.h
        src/parser/Block.cpp
        include/parser/Block.h
        src/parser/Stmt.cpp
        include/parser/expr/Stmt.h
        src/parser/Decl.cpp
        include/parser/Decl.h
        include/parser/expr/Expr.cpp
        include/parser/expr/Expr.h
        include/parser/expr/BinaryExpr.cpp
        include/parser/expr/BinaryExpr.h
        include/parser/expr/BinaryOp.h
        include/parser/expr/UnaryOp.h
        include/parser/expr/UnaryExpr.cpp
        include/parser/expr/UnaryExpr.h
        include/parser/expr/TernaryExpr.cpp
        include/parser/expr/TernaryExpr.h
        include/parser/expr/literals/IntegerLiteral.h
        include/parser/expr/literals/FloatLiteral.h
        include/parser/expr/literals/BoolLiteral.h
        include/parser/expr/literals/StringLiteral.h
        include/parser/expr/literals/NullLiteral.h
        include/parser/expr/IdentifierRef.cpp
        include/parser/expr/IdentifierRef.h
        include/parser/expr/FunctionCall.cpp
        include/parser/expr/FunctionCall.h
        include/parser/stmt/IfStmt.cpp
        include/parser/stmt/IfStmt.h
        include/parser/stmt/WhileLoop.cpp
        include/parser/stmt/WhileLoop.h
        include/parser/stmt/ForLoop.cpp
        include/parser/stmt/ForLoop.h
        include/parser/stmt/ReturnStmt.cpp
        include/parser/stmt/ReturnStmt.h
        include/parser/stmt/BreakStmt.cpp
        include/parser/stmt/BreakStmt.h
        include/parser/stmt/ContinueStmt.cpp
        include/parser/stmt/ContinueStmt.h
        include/parser/expr/MemberAccessExpr.cpp
        include/parser/expr/MemberAccessExpr.h
        include/parser/expr/CallExpr.cpp
        include/parser/expr/CallExpr.h
        include/parser/stmt/ExprStmt.cpp
        include/parser/stmt/ExprStmt.h
        include/parser/expr/ExprKind.cpp
        include/parser/expr/ExprKind.h
)

target_link_libraries(
    tests
    gtest_main
    magic_enum::magic_enum
)

include(GoogleTest)
gtest_discover_tests(tests)